sentinel_config/spec/test-fixtures/latest/overrides/globals_with_no_primary.txtar
-- sentinel.hcl --
-- sentinel_override.hcl --

global "foo" {
  value = "string"
}
      
-- astOut.json --
{
  "_t": "File",
  "_p": {
    "globals": {},
    "imports": {},
    "mocks": {},
    "params": {},
    "policies": {},
    "sentineloptions": null,
    "test": null
  }
}
-- diagOut.txt --
ERROR: There is no global named "foo". An override file can only override a global that was already declared in a primary configuration file.:sentinel_override.hcl:1,0->1,12
